--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -306,9 +306,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python361064bitpythondataconda2a9a3c884c40400db426ae2e3e580487"
   },
   "language_info": {
    "codemirror_mode": {
@@ -320,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.10-final"
   },
   "nteract": {
    "version": "0.12.3"
