add inspector section

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory Climate Analysis"
+    "# Use Inspect to Explore Database"
    ]
   },
   {
@@ -201,6 +201,13 @@
     "\n",
     "# Display 10 rows\n",
     "engine.execute('SELECT * FROM station LIMIT 10').fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory Climate Analysis"
    ]
   },
   {
