--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -467,16 +467,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2aedc03d748>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1f3026815f8>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
