--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -237,7 +237,7 @@
     }
    ],
    "source": [
-    "from datetime import datetime\n",
+    "# from datetime import datetime\n",
     "# Design a query to retrieve the last 12 months of precipitation data and plot the results\n",
     "\n",
     "# Calculate the date 1 year ago from the last data point in the database\n",
